name:                lazycore
version:             0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:            

-- A longer description of the package.
-- description:         

license:             MIT
license-file:        LICENSE
author:              Ömer Sinan Ağacan
maintainer:          omeragacan@gmail.com
category:            Language
build-type:          Simple
-- Extra files to be distributed with the package, such as examples or a 
-- README.
-- extra-source-files:  
cabal-version:       >=1.10

executable lazycore
  main-is:             Main.hs
  
  -- Modules included in this executable, other than Main.
  -- other-modules:       
  
  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:    
  build-depends:       base >=4.6 && <4.7,
                       containers >=0.5 && <0.6,
                       parsec >=3.1 && <3.2
  hs-source-dirs:      src
  default-language:    Haskell2010

executable lazycore-test
  main-is:             Test.hs
  build-depends:       base >=4.6 && <4.7,
                       tasty >=0.5 && <0.6,
                       tasty-hunit >=0.4 && <0.5,
                       containers >=0.5 && <0.6,
                       parsec >=3.1 && <3.2
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -threaded
